Add configurable port and authentication to DMaaP simulator
Issue-ID: POLICY-3890
Signed-off-by: dc443y <dc443y@att.com>
Change-Id: Idbeb3590a767e51aa0058a7a45d56a61e81301cb